--- a/tana.html
+++ b/tana.html
@@ -6,6 +6,7 @@
     <title>Tana</title>
 </head>
 <body>
+    <h1>Welcome to my website!</h1>
    <h1>practice of html,css and Javascript!</h1> 
 </body>
 </html>
