--- a/tana.html
+++ b/tana.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to my website!</h1>
    <h1>practice of html,css and Javascript!</h1> 
+    <h2>Adding another heading</h2>
 </body>
 </html>
